# api-brasileirao

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/: server.py
src/application/controllers/: __init__.py  list_all_clubs_controller.py  list_club_details_controller.py  list_one_club_controller.py
src/main/config/: app.py
src/main/routes/: brasileirao_router.py
src/scrapper/: browser.py  extractor.py
