[tool.poetry]
name = "api-brasileirao"
version = "0.1.0"
description = "API com as informações da tabela do Brasileirão Serie A"
authors = ["Gustavo H. O. Santos <gustavo.henrique.oliveira50@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.3.3"
selenium = "^4.10.0"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
beautifulsoup4 = "^4.12.2"
pandas = "^2.0.3"
lxml = "^4.9.3"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
